Finish internship at Bytedance

--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -10,7 +10,7 @@
   contents:
     - title:
       institution: Seed-MLsys@Bytedance
-      year: 2025.01 - present
+      year: 2025.01 - 2025.06
 
     - title: Rsearch Assistant
       institution: XLab@UIUC
