--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -8,7 +8,7 @@
 - title: Experience
   type: time_table
   contents:
-    - title:
+    - title: SDE Intern
       institution: Seed-MLsys@Bytedance
       year: 2025.01 - 2025.06
 
@@ -16,7 +16,7 @@
       institution: XLab@UIUC
       year: 2024.08 - 2024.12
       description:
-        - title: Mentor
+        - title: Mentor(s)
           contents:
             - Prof. Tianyin Xu
 
@@ -24,7 +24,7 @@
       institution: ADSL@USTC
       year: 2023.08 - 2024.07
       description:
-        - title: Mentors
+        - title: Mentor(s)
           contents:
             - Prof. Cheng Li
             - Prof. Sam Noh
