--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -1,7 +1,7 @@
 - title: Education
   type: time_table
   contents:
-    - title: Bachelor
+    - title: BS@CS, with honors
       institution: University of Science and Technology of China
       year: 2021-2025
 
