Starting at HKUST

--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -1,6 +1,10 @@
 - title: Education
   type: time_table
   contents:
+    - title: PhD in Computer Science
+      institution: Hong Kong University of Science and Technology
+      year: 2025-present
+      
     - title: BS@CS, with honors
       institution: University of Science and Technology of China
       year: 2021-2025
@@ -12,7 +16,7 @@
       institution: Seed-MLsys@Bytedance
       year: 2025.01 - 2025.06
 
-    - title: Rsearch Assistant
+    - title: Research Assistant
       institution: XLab@UIUC
       year: 2024.08 - 2024.12
       description:
